--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import-normalize; /* bring in normalize.css styles */
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +10,50 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1,
+h2,
+p,
+li {
+  margin: 0;
+  padding: 0;
+  color: bisque;
+}
+
+ul {
+  list-style: none;
+}
+
+.thumb {
+  background-color: rgb(164, 99, 139);
+  width: 500px;
+  margin: 50px auto 50px auto;
+  text-align: center;
+  border: 3px solid rgb(164, 99, 139);
+  border-radius: 10px;
+  padding: 25px;
+}
+
+button {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+input,
+select,
+textarea {
+  border: solid 2px #8f0972;  
+  color: rgb(40, 39, 39);
+  font: inherit;
+  margin: 0;
+}
+
+input {
+  line-height: normal;
 }
